# Portfolio

./: README.md
2025-1/air_quality_prediction/: project.py
2025-1/bank_web_server/: app.py
2025-1/electricity_demand_forecast/: README.md
2025-2/chungbuk_land_use_classification/: 01_preprocess.py  README.md  code_01_add_feature.py  code_05_kmeans_upgrade07_downgrade_k4.py  code_05_kmeans_upgrade08.py  code_05_kmeans_upgrade08_k2.py  code_05_kmeans_upgrade08_k4.py  code_05_kmeans_upgrade09.py  code_05_kmeans_upgrade09_k2.py  code_05_kmeans_upgrade09_k4.py  code_07_map.py  kmeans_feature20_k2.py  kmeans_feature20_k3.py  kmeans_feature20_k4.py  kmeans_feature4_k2.py  kmeans_feature4_k3.py  kmeans_feature4_k4.py  kmeans_feature6_k2.py  kmeans_feature6_k3.py  kmeans_feature6_k4.py  kmeans_feature_k4.py  kmeans_featureall_k2.py  kmeans_featureall_k3.py  kmeans_featureall_k4.py  map.py  preprocess.py  preprocess2.py
2025-2/chungbuk_land_use_data_analysis/: corr_heatmap_feature4.py  donut.py  timeseries_population.py  timeseries_population2.py
2025-2/land_use_correlation_analysis/: code.py  code_03_heatmap.py  code_03_heatmap02.py  code_03_heatmap03.py  heatmap1.py  (+14 more)
2025-2/pv_data_publisher/src/pv_edge/: package.xml  setup.cfg  setup.py
2025-2/pv_data_publisher/src/pv_edge/launch/: pv_edge.launch.py
2025-2/pv_data_publisher/src/pv_edge/pv_edge/: pv_simulator_node.py
2025-2/pv_data_publisher/src/pv_interfaces/: CMakeLists.txt  package.xml
2025-2/pv_data_publisher/src/pv_interfaces/msg/: PVSample.msg
2026-1solar_power_forecasting_reproduction/: solar_power_forecasting_reproduction.ipynb
(+92 files in other folders)
